force-app/main/default/objects/Contact/fields/Agree_to_Data_protection_statement__c.field-meta.xml
<CustomField>
    <fullName>Agree_to_Data_protection_statement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agree to Data protection statement</label>
    <type>Checkbox</type>
</CustomField>