force-app/main/default/objects/Contact/fields/All_drivers_protocol_pickup_procedures__c.field-meta.xml
<CustomField>
    <fullName>All_drivers_protocol_pickup_procedures__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All drivers protocol procedures sent?</label>
    <type>Checkbox</type>
</CustomField>