force-app/main/default/objects/Contact/fields/Any_medical_condition_or_illness__c.field-meta.xml
<CustomField>
    <fullName>Any_medical_condition_or_illness__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Any medical condition or illness?</label>
    <type>Checkbox</type>
</CustomField>