force-app/main/default/objects/Contact/fields/Any_other_comments__c.field-meta.xml
<CustomField>
    <fullName>Any_other_comments__c</fullName>
    <label>Any other comments?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>