force-app/main/default/objects/Contact/fields/Any_special_skills_hobbies_or_interests__c.field-meta.xml
<CustomField>
    <fullName>Any_special_skills_hobbies_or_interests__c</fullName>
    <label>Any special skills, hobbies or interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Music</fullName>
            </value>
            <value>
                <fullName>Gardening, Art</fullName>
            </value>
            <value>
                <fullName>Theatre</fullName>
            </value>
            <value>
                <fullName>Reading</fullName>
            </value>
            <value>
                <fullName>Dancing</fullName>
            </value>
            <value>
                <fullName>Sports</fullName>
            </value>
            <value>
                <fullName>Current Affairs</fullName>
            </value>
            <value>
                <fullName>History</fullName>
            </value>
            <value>
                <fullName>TV Shows</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>