force-app/main/default/objects/Contact/fields/Anything_to_interrupt_volunteering__c.field-meta.xml
<CustomField>
    <fullName>Anything_to_interrupt_volunteering__c</fullName>
    <label>Anything to interrupt volunteering?</label>
    <type>TextArea</type>
</CustomField>