force-app/main/default/objects/Contact/fields/Attendance__c.field-meta.xml
<CustomField>
    <fullName>Attendance__c</fullName>
    <label>Attendance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>Did Not Attend</fullName>
            </value>
            <value>
                <fullName>Invited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>