force-app/main/default/objects/Contact/fields/Availability_Notes__c.field-meta.xml
<CustomField>
    <fullName>Availability_Notes__c</fullName>
    <label>Availability Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>