force-app/main/default/objects/Contact/fields/Available_for_bag_packing__c.field-meta.xml
<CustomField>
    <fullName>Available_for_bag_packing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available for bag-packing?</label>
    <type>Checkbox</type>
</CustomField>