force-app/main/default/objects/Contact/fields/Available_for_cover__c.field-meta.xml
<CustomField>
    <fullName>Available_for_cover__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available for cover?</label>
    <type>Checkbox</type>
</CustomField>