force-app/main/default/objects/Contact/fields/BS_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>BS_Registration_Date__c</fullName>
    <label>BS Registration Date</label>
    <type>Date</type>
</CustomField>