force-app/main/default/objects/Contact/fields/Car_Colour__c.field-meta.xml
<CustomField>
    <fullName>Car_Colour__c</fullName>
    <label>Car Colour</label>
    <length>50</length>
    <type>Text</type>
</CustomField>