force-app/main/default/objects/Contact/fields/Car_Insurance_Form__c.field-meta.xml
<CustomField>
    <fullName>Car_Insurance_Form__c</fullName>
    <label>Car Insurance Form*</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Returned &amp; Saved</fullName>
            </value>
            <value>
                <fullName>N.A.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>