force-app/main/default/objects/Contact/fields/Car_make__c.field-meta.xml
<CustomField>
    <fullName>Car_make__c</fullName>
    <label>Car make</label>
    <length>100</length>
    <type>Text</type>
</CustomField>