force-app/main/default/objects/Contact/fields/Car_model__c.field-meta.xml
<CustomField>
    <fullName>Car_model__c</fullName>
    <label>Car model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>