force-app/main/default/objects/Contact/fields/Car_registration_number__c.field-meta.xml
<CustomField>
    <fullName>Car_registration_number__c</fullName>
    <label>Car registration number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>