force-app/main/default/objects/Contact/fields/Comments_re_company_introduction__c.field-meta.xml
<CustomField>
    <fullName>Comments_re_company_introduction__c</fullName>
    <label>Comments re: company introduction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>