force-app/main/default/objects/Contact/fields/Comments_re_event__c.field-meta.xml
<CustomField>
    <fullName>Comments_re_event__c</fullName>
    <label>Comments re: event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>