force-app/main/default/objects/Contact/fields/Comments_re_sponsored_fundraising__c.field-meta.xml
<CustomField>
    <fullName>Comments_re_sponsored_fundraising__c</fullName>
    <label>Comments re: sponsored fundraising</label>
    <length>255</length>
    <type>Text</type>
</CustomField>