force-app/main/default/objects/Contact/fields/Consent_to_be_contacted__c.field-meta.xml
<CustomField>
    <fullName>Consent_to_be_contacted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent to be contacted</label>
    <type>Checkbox</type>
</CustomField>