force-app/main/default/objects/Contact/fields/Date_attended__c.field-meta.xml
<CustomField>
    <fullName>Date_attended__c</fullName>
    <label>Date attended</label>
    <type>Date</type>
</CustomField>