force-app/main/default/objects/Contact/fields/Date_of_consent_given__c.field-meta.xml
<CustomField>
    <fullName>Date_of_consent_given__c</fullName>
    <label>Date of consent given</label>
    <type>Date</type>
</CustomField>