force-app/main/default/objects/Contact/fields/Declaration_of_Good_Character_Received__c.field-meta.xml
<CustomField>
    <fullName>Declaration_of_Good_Character_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Declaration of Good Character Received</label>
    <type>Checkbox</type>
</CustomField>