force-app/main/default/objects/Contact/fields/Designated_Delivery_Day__c.field-meta.xml
<CustomField>
    <fullName>Designated_Delivery_Day__c</fullName>
    <label>Designated Delivery Day</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mon</fullName>
            </value>
            <value>
                <fullName>Wed</fullName>
            </value>
            <value>
                <fullName>Fri</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>