force-app/main/default/objects/Contact/fields/Designated_Route_s__c.field-meta.xml
<CustomField>
    <fullName>Designated_Route_s__c</fullName>
    <label>Designated Route(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Route 1</fullName>
            </value>
            <value>
                <fullName>Route 2</fullName>
            </value>
            <value>
                <fullName>Route 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>