force-app/main/default/objects/Contact/fields/Disclosure_received__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_received__c</fullName>
    <label>Disclosure received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Received – Approved</fullName>
            </value>
            <value>
                <fullName>Received – Not Eligible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>