force-app/main/default/objects/Contact/fields/Do_you_have_access_to_a_printer__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_access_to_a_printer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you have access to a printer?</label>
    <type>Checkbox</type>
</CustomField>