force-app/main/default/objects/Contact/fields/Docs_to_read_for_Befriending_sent__c.field-meta.xml
<CustomField>
    <fullName>Docs_to_read_for_Befriending_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Docs to read for Befriending sent?</label>
    <type>Checkbox</type>
</CustomField>