force-app/main/default/objects/Contact/fields/Driving_Availability__c.field-meta.xml
<CustomField>
    <fullName>Driving_Availability__c</fullName>
    <label>Driving Availability</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>