force-app/main/default/objects/Contact/fields/Elaborate_on_your_selections__c.field-meta.xml
<CustomField>
    <fullName>Elaborate_on_your_selections__c</fullName>
    <label>Elaborate on your selections</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>