force-app/main/default/objects/Contact/fields/Emergency_Contact_Landline__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Landline__c</fullName>
    <label>Emergency Contact: Landline</label>
    <type>Phone</type>
</CustomField>