force-app/main/default/objects/Contact/fields/Emergency_Contact_Surname__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Surname__c</fullName>
    <label>Emergency Contact: Surname</label>
    <length>100</length>
    <type>Text</type>
</CustomField>