force-app/main/default/objects/Contact/fields/Exit_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Exit_Feedback__c</fullName>
    <label>Exit Feedback</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Feedback</valueSetName>
    </valueSet>
</CustomField>