force-app/main/default/objects/Contact/fields/First_visit_call__c.field-meta.xml
<CustomField>
    <fullName>First_visit_call__c</fullName>
    <label>First visit/ call</label>
    <type>Date</type>
</CustomField>