force-app/main/default/objects/Contact/fields/Garda_Clearance_letter_sent__c.field-meta.xml
<CustomField>
    <fullName>Garda_Clearance_letter_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Garda Clearance letter sent</label>
    <type>Checkbox</type>
</CustomField>