force-app/main/default/objects/Contact/fields/Garda_Vetting_guidance__c.field-meta.xml
<CustomField>
    <fullName>Garda_Vetting_guidance__c</fullName>
    <label>Garda Vetting guidance info sent date</label>
    <type>Date</type>
</CustomField>