force-app/main/default/objects/Contact/fields/Garda_Vetting_Pack_Returned__c.field-meta.xml
<CustomField>
    <fullName>Garda_Vetting_Pack_Returned__c</fullName>
    <label>Garda Vetting Pack Returned</label>
    <type>Date</type>
</CustomField>