force-app/main/default/objects/Contact/fields/Garda_Vetting_Pack_Sent__c.field-meta.xml
<CustomField>
    <fullName>Garda_Vetting_Pack_Sent__c</fullName>
    <label>Garda Vetting Pack Sent</label>
    <type>Date</type>
</CustomField>