force-app/main/default/objects/Contact/fields/Garda_Vetting_Status__c.field-meta.xml
<CustomField>
    <fullName>Garda_Vetting_Status__c</fullName>
    <label>Garda Vetting Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete - Approved</fullName>
            </value>
            <value>
                <fullName>Compete - Not Eligible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>