force-app/main/default/objects/Contact/fields/GFD_and_BS_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>GFD_and_BS_Registration_Date__c</fullName>
    <label>GFD and BS Registration Date</label>
    <type>Date</type>
</CustomField>