force-app/main/default/objects/Contact/fields/GFD_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>GFD_Registration_Date__c</fullName>
    <label>GFD Registration Date</label>
    <type>Date</type>
</CustomField>