force-app/main/default/objects/Contact/fields/Have_car_and_full_clean_driving_licence__c.field-meta.xml
<CustomField>
    <fullName>Have_car_and_full_clean_driving_licence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Car and full clean driving licence?</label>
    <type>Checkbox</type>
</CustomField>