force-app/main/default/objects/Contact/fields/How_did_you_hear_about_MC__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_hear_about_MC__c</fullName>
    <label>How did you hear about MC?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>i-vol</fullName>
            </value>
            <value>
                <fullName>Online search</fullName>
            </value>
            <value>
                <fullName>Newspaper</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Someone I know is involved with Making Connection</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>