force-app/main/default/objects/Contact/fields/Hrs_per_week_interested_in_volunteering__c.field-meta.xml
<CustomField>
    <fullName>Hrs_per_week_interested_in_volunteering__c</fullName>
    <label>Hrs per week interested in volunteering</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>