force-app/main/default/objects/Contact/fields/HSE_eLand_Certification__c.field-meta.xml
<CustomField>
    <fullName>HSE_eLand_Certification__c</fullName>
    <label>HSE eLand Certification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invited sent</fullName>
            </value>
            <value>
                <fullName>Training Completed</fullName>
            </value>
            <value>
                <fullName>N.A.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>