force-app/main/default/objects/Contact/fields/ID_Adds_to_100_Points__c.field-meta.xml
<CustomField>
    <fullName>ID_Adds_to_100_Points__c</fullName>
    <label>ID Adds to 100 Points?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>n.a. not received</fullName>
            </value>
            <value>
                <fullName>No - followup pending</fullName>
            </value>
            <value>
                <fullName>No - followup sent</fullName>
            </value>
            <value>
                <fullName>Yes - 100 points confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>