force-app/main/default/objects/Contact/fields/ID_Number__c.field-meta.xml
<CustomField>
    <fullName>ID_Number__c</fullName>
    <label>ID Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>