force-app/main/default/objects/Contact/fields/ID_Received_Saved__c.field-meta.xml
<CustomField>
    <fullName>ID_Received_Saved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ID Received &amp; Saved</label>
    <type>Checkbox</type>
</CustomField>