force-app/main/default/objects/Contact/fields/If_yes_give_details__c.field-meta.xml
<CustomField>
    <fullName>If_yes_give_details__c</fullName>
    <label>If &apos;yes&apos; give details</label>
    <type>TextArea</type>
</CustomField>