force-app/main/default/objects/Contact/fields/Infrequent_news_or_events_from_MC__c.field-meta.xml
<CustomField>
    <fullName>Infrequent_news_or_events_from_MC__c</fullName>
    <label>Infrequent news or events from MC</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Post</fullName>
            </value>
            <value>
                <fullName>I don’t want to hear about other news/ events</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>