force-app/main/default/objects/Contact/fields/Introduce_MC_to_company__c.field-meta.xml
<CustomField>
    <fullName>Introduce_MC_to_company__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Introduce MC to company?</label>
    <type>Checkbox</type>
</CustomField>