force-app/main/default/objects/Contact/fields/Introduction_Complete__c.field-meta.xml
<CustomField>
    <fullName>Introduction_Complete__c</fullName>
    <label>Introduction Complete</label>
    <type>Date</type>
</CustomField>