force-app/main/default/objects/Contact/fields/Invite_Sent__c.field-meta.xml
<CustomField>
    <fullName>Invite_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invite Sent</label>
    <type>Checkbox</type>
</CustomField>