force-app/main/default/objects/Contact/fields/Inviter_Form_Submitted_to_dlr_volunteer__c.field-meta.xml
<CustomField>
    <fullName>Inviter_Form_Submitted_to_dlr_volunteer__c</fullName>
    <label>Inviter Form Submitted to dlr volunteer</label>
    <type>Date</type>
</CustomField>