force-app/main/default/objects/Contact/fields/List_documents_sent__c.field-meta.xml
<CustomField>
    <fullName>List_documents_sent__c</fullName>
    <label>List documents sent</label>
    <type>TextArea</type>
</CustomField>