force-app/main/default/objects/Contact/fields/Matched_with__c.field-meta.xml
<CustomField>
    <fullName>Matched_with__c</fullName>
    <label>Matched with</label>
    <length>100</length>
    <type>Text</type>
</CustomField>