force-app/main/default/objects/Contact/fields/Month_9_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Month_9_Feedback__c</fullName>
    <label>Month 9 Feedback</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Feedback</valueSetName>
    </valueSet>
</CustomField>