force-app/main/default/objects/Contact/fields/Name_and_location_of_company__c.field-meta.xml
<CustomField>
    <fullName>Name_and_location_of_company__c</fullName>
    <label>Name and location of company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>