force-app/main/default/objects/Contact/fields/Name_of_Primary_Care_Centre__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Primary_Care_Centre__c</fullName>
    <label>Name of Primary Care Centre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>