force-app/main/default/objects/Contact/fields/No_of_months_Volunteer_committed__c.field-meta.xml
<CustomField>
    <fullName>No_of_months_Volunteer_committed__c</fullName>
    <label>No. of months Volunteer committed</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>