force-app/main/default/objects/Contact/fields/Notes_Reminders__c.field-meta.xml
<CustomField>
    <fullName>Notes_Reminders__c</fullName>
    <label>Notes/ Reminders</label>
    <length>255</length>
    <type>Text</type>
</CustomField>