force-app/main/default/objects/Contact/fields/Occupation1__c.field-meta.xml
<CustomField>
    <fullName>Occupation1__c</fullName>
    <label>Referral Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public Health Nurse (PHN)</fullName>
            </value>
            <value>
                <fullName>Social Worker</fullName>
            </value>
            <value>
                <fullName>Occupational Therapist</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>