force-app/main/default/objects/Contact/fields/ONGOING_3_Monthly_Feedback__c.field-meta.xml
<CustomField>
    <fullName>ONGOING_3_Monthly_Feedback__c</fullName>
    <label>ONGOING: 3 Monthly Feedback</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Feedback</valueSetName>
    </valueSet>
</CustomField>