force-app/main/default/objects/Contact/fields/Organise_event_this_year__c.field-meta.xml
<CustomField>
    <fullName>Organise_event_this_year__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Organise event this year?</label>
    <type>Checkbox</type>
</CustomField>