force-app/main/default/objects/Contact/fields/Other_Details_about_MC__c.field-meta.xml
<CustomField>
    <fullName>Other_Details_about_MC__c</fullName>
    <label>Other_Details_about_MC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>