force-app/main/default/objects/Contact/fields/Other_Occupation__c.field-meta.xml
<CustomField>
    <fullName>Other_Occupation__c</fullName>
    <label>Other Occupation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>