force-app/main/default/objects/Contact/fields/Photo_ID_Verified__c.field-meta.xml
<CustomField>
    <fullName>Photo_ID_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Photo ID Verified</label>
    <type>Checkbox</type>
</CustomField>