force-app/main/default/objects/Contact/fields/Photo_Media_Consent__c.field-meta.xml
<CustomField>
    <fullName>Photo_Media_Consent__c</fullName>
    <label>Photo/ Media Consent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Documents_to_sign</valueSetName>
    </valueSet>
</CustomField>