force-app/main/default/objects/Contact/fields/Potential_Volunteering__c.field-meta.xml
<CustomField>
    <fullName>Potential_Volunteering__c</fullName>
    <label>Potential Volunteering</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Befriending Visits</fullName>
            </value>
            <value>
                <fullName>Befriending Calls</fullName>
            </value>
            <value>
                <fullName>Good Food DeliveredCovid-19 Shopping</fullName>
            </value>
            <value>
                <fullName>Covid-19 Pension</fullName>
            </value>
            <value>
                <fullName>Support to Exercise</fullName>
            </value>
            <value>
                <fullName>Digital literacy</fullName>
            </value>
            <value>
                <fullName>Events: live/ online</fullName>
            </value>
            <value>
                <fullName>Events: neighbourhoodHome (family volunteering)</fullName>
            </value>
            <value>
                <fullName>Professional Volunteering</fullName>
            </value>
            <value>
                <fullName>Short Term Volunteering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>