force-app/main/default/objects/Contact/fields/Previous_volunteering_experience_if_any__c.field-meta.xml
<CustomField>
    <fullName>Previous_volunteering_experience_if_any__c</fullName>
    <label>Previous volunteering experience(if any)</label>
    <type>TextArea</type>
</CustomField>