force-app/main/default/objects/Contact/fields/Ref1_Address_line_2__c.field-meta.xml
<CustomField>
    <fullName>Ref1_Address_line_2__c</fullName>
    <label>Address line 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>