force-app/main/default/objects/Contact/fields/Ref1_County__c.field-meta.xml
<CustomField>
    <fullName>Ref1_County__c</fullName>
    <label>County</label>
    <length>100</length>
    <type>Text</type>
</CustomField>