force-app/main/default/objects/Contact/fields/Ref1_Eircode__c.field-meta.xml
<CustomField>
    <fullName>Ref1_Eircode__c</fullName>
    <label>Eircode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>