force-app/main/default/objects/Contact/fields/Ref1_Position_Company__c.field-meta.xml
<CustomField>
    <fullName>Ref1_Position_Company__c</fullName>
    <label>Position/ Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>