force-app/main/default/objects/Contact/fields/Ref1_Town_Area__c.field-meta.xml
<CustomField>
    <fullName>Ref1_Town_Area__c</fullName>
    <label>Town/ Area</label>
    <length>100</length>
    <type>Text</type>
</CustomField>