force-app/main/default/objects/Contact/fields/Ref2_Address_line_1__c.field-meta.xml
<CustomField>
    <fullName>Ref2_Address_line_1__c</fullName>
    <label>Address line 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>