force-app/main/default/objects/Contact/fields/Ref2_County__c.field-meta.xml
<CustomField>
    <fullName>Ref2_County__c</fullName>
    <label>County</label>
    <length>50</length>
    <type>Text</type>
</CustomField>