force-app/main/default/objects/Contact/fields/Ref2_Eircode__c.field-meta.xml
<CustomField>
    <fullName>Ref2_Eircode__c</fullName>
    <label>Eircode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>