force-app/main/default/objects/Contact/fields/Ref2_Email__c.field-meta.xml
<CustomField>
    <fullName>Ref2_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>