force-app/main/default/objects/Contact/fields/Ref2_Telephone_landline__c.field-meta.xml
<CustomField>
    <fullName>Ref2_Telephone_landline__c</fullName>
    <label>Telephone (landline)</label>
    <type>Phone</type>
</CustomField>