force-app/main/default/objects/Contact/fields/Ref2_Telephone_mobile__c.field-meta.xml
<CustomField>
    <fullName>Ref2_Telephone_mobile__c</fullName>
    <label>Telephone (mobile)</label>
    <type>Phone</type>
</CustomField>