force-app/main/default/objects/Contact/fields/Ref2_Town_Area__c.field-meta.xml
<CustomField>
    <fullName>Ref2_Town_Area__c</fullName>
    <label>Town/ Area</label>
    <length>50</length>
    <type>Text</type>
</CustomField>