force-app/main/default/objects/Contact/fields/Reference_1_Name__c.field-meta.xml
<CustomField>
    <fullName>Reference_1_Name__c</fullName>
    <label>Reference 1 Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>