force-app/main/default/objects/Contact/fields/Reference_2_Name__c.field-meta.xml
<CustomField>
    <fullName>Reference_2_Name__c</fullName>
    <label>Reference 2 Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>