force-app/main/default/objects/Contact/fields/Reference_Status__c.field-meta.xml
<CustomField>
    <fullName>Reference_Status__c</fullName>
    <label>Reference Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending (default)</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Reference Calls Complete</fullName>
            </value>
            <value>
                <fullName>Reviewed - Approved</fullName>
            </value>
            <value>
                <fullName>Reviewed - Not Eligible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>